--- a/src/app/features/scoreboard/scoreboard.page.scss
+++ b/src/app/features/scoreboard/scoreboard.page.scss
@@ -1,6 +1,7 @@
 // Scoreboard Page Styles
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 ion-content {
